# Agents

./: .gitignore  AGENTS.md  README.md  langgraph.json  pyproject.toml
.cursor/rules/: dependency-management.mdc  test-driven-development.mdc
agents/: common.py
agents/experiments/google_adk/pricing_rating_poc/: Sandbox.evalset.json  agent.py  pricing_team.py  vlad.evalset.json
agents/experiments/google_adk/weather_team/: first_eval.evalset.json
agents/experiments/handoff/agno_team/: content_team.py  multilingual_team.py
agents/experiments/handoff/agno_team/pricing_rating_poc/: pricing_team.py  route.py
agents/logseq_rag/: agent.py
agents/sandbox/: handoff.py  handoff_windsurf.py  translate.py
src/_archive/experiments/google_adk/: start_adk.sh
src/_archive/experiments/google_adk/weather_team/: agent.py
src/_archive/experiments/handoff/agno_team/: multilingual_team.py
src/_archive/experiments/handoff/agno_team/pricing_rating_poc/: pricing_team.py
src/_archive/experiments/handoff/shared_summary/: customer_support.py
src/_archive/logseq_rag/: agent.py  docker_vector_store.sh
src/_archive/sandbox/: agent_memory.py  chonkie_experiment.py  handoff.py  handoff_cursor.py
src/_archive/sandbox/debate/: direct_debate.py  with_debater.py
src/agents/walkandlearn_summary/: __init__.py  config.py  graph.py  io.py  models.py  prompts.py
src/agents/walkandlearn_summary/nodes/: __init__.py  evaluation.py  output.py  summary.py
src/agents/walkandlearn_summary/prompts/: BAK_summary_technical.md  evaluation.md  summary_emotional.md  summary_technical.md
src/poc/: __init__.py  deep_agent.py  simple_agent.py
tests/: test_hello_world.py
tests/agents/walkandlearn_summary/: __init__.py  test_evaluation.py  test_output.py  test_package_import.py  test_summary.py
