[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.1.3",
    "chonkie[semantic]>=0.4.1",
    "duckduckgo-search>=7.3.2",
    "exa-py>=1.8.8",
    "fastapi[standard]>=0.115.8",
    "google-adk[eval]>=0.1.0",
    "lancedb>=0.19.0",
    "lxml-html-clean>=0.4.1",
    "mistralai>=1.5.0",
    "newspaper4k>=0.9.3.1",
    "openai>=1.63.0",
    "pandas>=2.2.3",
    "pgvector>=0.3.6",
    "psycopg[binary]>=3.2.4",
    "pypdf>=5.3.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.38",
    "tantivy>=0.22.0",
    "tavily-python>=0.5.1",
    "yfinance>=0.2.53",
]
