[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "agno>=1.1.1",
    "arize-otel>=0.8.2",
    "chonkie>=0.4.1",
    "duckduckgo-search>=7.3.2",
    "exa-py>=1.8.8",
    "fastapi[standard]>=0.115.8",
    "google-adk[eval]>=1.5.0",
    "lancedb>=0.19.0",
    "litellm>=1.73.2",
    "lxml-html-clean>=0.4.1",
    "mistralai>=1.5.0",
    "nest-asyncio>=1.6.0",
    "newspaper4k>=0.9.3.1",
    "openai>=1.63.0",
    "openai-agents[litellm]>=0.1.0",
    "openinference-instrumentation-google-adk>=0.1.1",
    "pandas>=2.2.3",
    "pgvector>=0.3.6",
    "psycopg[binary]>=3.2.4",
    "pypdf>=5.3.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.38",
    "tantivy>=0.22.0",
    "tavily-python>=0.5.1",
    "yfinance>=0.2.52",
    "pytest>=8.4.1",
    "run-main>=1.0.1",
    "pydantic>=2.11.7",
    "langgraph-cli[inmem]>=0.3.4",
    "langchain>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-google-genai>=3.0.0",
    "langchain-localai>=1.0.0",
    "langchain-mistralai>=1.0.0",
    "langgraph>=0.5.2",
    "gradio>=5.36.2",
    "docker>=7.1.0",
    "ipython>=9.4.0",
    "deepagents>=0.0.5",
    "langchain-google-vertexai>=3.0.3",
]
